[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.mlhframework"
version = "1.0.18"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Emily K. Miller", email = "ekressmiller@lsscm.org" },
]
dependencies = [
    "docassemble.ALToolbox>=0.12.0",
    "docassemble.AssemblyLine>=4.1.0",
    "docassemble.GithubFeedbackForm>=0.5.6",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
