[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.mlhframework"
version = "1.0.19"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Emily K. Miller", email = "ekressmiller@lsscm.org" },
]
dependencies = [
    "docassemble.ALToolbox>=0.14.0",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@bates_number_to_aldoc",
    "docassemble.GithubFeedbackForm @ git+https://github.com/SuffolkLITLab/docassemble-GithubFeedbackForm.git@main",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
